eine local änderung

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h1>Hallo ihr drei!</h1>
+    <h1>Hallo ihr drei!!</h1>
     <h2>Wie geht es?</h2>
   </body>
 </html>
