Update 13.10 Ordnerstruktur Neu

--- a/index.html
+++ b/index.html
@@ -1,13 +1,103 @@
-<!doctype html>
-<html lang="de">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eine einfache HTML Seite</title>
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <h1>;)</h1>
-    <h2>Wie geht es?</h2>
-  </body>
+<html lang="en">
+
+    <head>
+        <meta charset="UTF-8"/>
+        <meta name="author" content="Susi Radzanowski"/>
+        <meta name="description" content="This page contains everything that you need to know about comfort drinks."/>
+        <title>Comfy Cup</title>
+        <link rel="icon" href="03 Img/6602177.png"/>
+
+<!-- CSS Einbindung -->
+        <link rel="stylesheet" href="style.css" type="text/css"/>
+
+<!-- JavaScript Tag Einbindung -->
+        <script src="script.js" defer> </script>
+<!-- HTML -->
+    </head>
+
+    <body>
+        <h1>Welcome to Comfy Cup</h1>
+
+        <hr>
+
+        <nav>
+            <div id="div1">
+                <h3>Here is a div container</h3>
+            </div>
+            <ul>
+                <li>
+                    <a href="#html" id="Link1">Learning more about beverages</a>
+                </li>
+                <li>
+                    <a href="#vacation">Making a cocktail</a>
+                </li>
+            </ul>
+        </nav>
+
+        <hr>
+
+        <section id="html"
+
+             <h2>The place where your journey starts</h2>
+            <p>Cannot decide what to drink? Wether if its Coffee or Tea, there is always also hot chocolate.
+            <p>And no matter what you will choose in the end, it will fill you with warmth.</p
+                <img src="plain-html/Img/istockphoto-1454021618-612x612.jpg" alt="Coffee shop"
+                title="Comfy Cup Coffee Shop" width="612">
+
+            <ol>
+                <li>...Learn more about Coffee</li>
+                <li>...Learn more about Matcha</li>
+                <li>...Learn more about Cocoa</li></ol>
+            <br>I use recources from <abbr title="Comfy Cup Coffee">
+                <a href="https://mycoffeecup.de/collections/all-products?srsltid=AfmBOor_AFe03_z05v5ngt_njOTj_SKc2ZaUh3pMj1oNJBEXY94rjDG0">
+                Cup time</a></abbr>
+        <h3>Find your new routine now</h3>
+            <p>Let us show you how fun drinks can upgrade your everyday life!</p>
+        <h3>How to start a routine</h3
+            <p>&nbsp;&nbsp;Step 1:...</p>
+            <p>&nbsp;&nbsp;Step 2:...</p>
+            <p>&nbsp;&nbsp;Step 3:...</p>
+
+        <h3>Essentials and how to</h3>
+            <li><p>To get started with several beverages can be <em>confusing as a starter.</em></p></li>
+            <li><p>Becoming a home barista can be so easy with <strong>our starter kits.</strong></p></li>
+                <p>Impress family and friends with your new learned skills!</p>
+                <p>You can contact us online or find us here:</p>
+
+        <h4>The history behind beverages</h4>
+            <p>From the very beginning of human history, water was the essential drink for survival. But as societies evolved, so did their thirst for variety. Thousands of years ago, early humans discovered fermentation—likely by accident—which led to the creation of primitive alcoholic beverages made from fruits, honey, and grains.
+            In ancient Mesopotamia and Egypt, beer became a staple, brewed from barley and consumed daily. Meanwhile, wine emerged in the Mediterranean, especially in Greece and Rome, where it was often mixed with water and used in both social and religious rituals. Milk also became common as people began domesticating animals like cows and goats.
+            <p>During the Middle Ages, new beverages entered the scene.
+            <p><em>Tea</em> was cultivated in China and spread to Japan, while coffee, originating in Ethiopia, gained popularity across the Islamic world. Distillation techniques developed during this time gave rise to stronger drinks like spirits and liquors.</p>
+            <br>The colonial era brought global trade, and with it, the widespread distribution of coffee, tea, chocolate, and sugar. These ingredients transformed drinking habits around the world, especially in Europe and the Americas.
+            With the Industrial Revolution came mass production. Bottling, refrigeration, and pasteurization made beverages safer and more widely available.
+            <p>Carbonated drinks like soda were invented, and milk and juices could be stored longer.
+            In the modern era, innovation exploded. Soft drinks, energy drinks, and bottled water became everyday items. More recently, health trends have led to the rise of smoothies, plant-based milks, and low-sugar alternatives, reflecting a growing awareness of nutrition and wellness.</p>
+        <br><address>
+            Coffeetown Riviera Cancún<br>
+            Bahia Petempich Puerto Morelos, México<br>
+            Colonia Morelos, México 77580
+        </address>
+
+        <!-- TODO: Add more beverage types -->
+
+        <dl>
+            <dt>North Pole</dt>
+            <dd>I hear this is <strong>cold</strong>!</dd>
+            <dt>South Pole</dt>
+            <dd>This is also cold.</dd>
+            <dt>Mountain Tops</dt>
+            <dd>These are also cold.</dd>
+        </dl>
+
+            <hr>
+            &lt;&lt;&lt; &copy; Susi Radzanowski &gt;&gt;&gt;
+            <hr>
+
+        <footer>
+
+        </footer>
+
+    </body>
+
 </html>
