Upload new code

--- a/about.html
+++ b/about.html
@@ -12,11 +12,24 @@
 
 <!-- JavaScript Tag Einbindung -->
         <script src="script.js" defer> </script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+    crossorigin="anonymous"/>
+
 <!-- HTML -->
 </head>
 
 <body>
-    
+    <div>
+        <input type="checkbox"
+     class="checkbox" id="checkbox">
+        <label for="checkbox" class="label">
+            <i class="fas fa-moon fa-1x"></i>
+            <i class="fas fa-sun fa-1x"></i>
+            <div class="ball"></div>
+        </label>
+    </div>
 </body>
 
 </html>
