--- a/index.html
+++ b/index.html
@@ -1,53 +1,53 @@
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="author" content="Susi Radzanowski"/>
-        <meta name="description" content="This page contains everything that you need to know about comfort drinks."/>
-        <title>Comfy Cup</title>
-        <link rel="icon" href="03 Img/6602177.png"/>
+  <head>
+    <meta charset="UTF-8"/>
+    <meta name="author" content="Susi Radzanowski"/>
+    <meta name="description" content="This page contains everything that you need to know about comfort drinks."/>
+    <title>Comfy Cup</title>
+    <link rel="icon" href="03 Img/6602177.png"/>
+  </head>
 
 <!-- CSS Einbindung -->
-        <link rel="stylesheet" href="style.css" type="text/css"/>
+    <link rel="stylesheet" href="style.css" type="text/css"/>
 
 <!-- JavaScript Tag Einbindung -->
-        <script src="script.js" defer> </script>
+    <script src="script.js" defer> </script>
+ 
 <!-- HTML -->
-    </head>
-
     <body>
         <h1>Welcome to Comfy Cup</h1>
 
-        <hr>
-
+      <hr>
         <nav>
             <div id="div1">
                 <h3>Here is a div container</h3>
             </div>
             <ul>
-                <li>
-                    <a href="#html" id="Link1">Learning more about beverages</a>
-                </li>
-                <li>
-                    <a href="#vacation">Making a cocktail</a>
-                </li>
+              <li>
+                <a href="#html" id="Link1">Learning more about beverages</a>
+              </li>  
+              <li>
+                <a href="#vacation">Making a cocktail</a>
+              </li>
             </ul>
         </nav>
+      <hr>
 
-        <hr>
+      <section id="html">
+        <h2>The place where your journey starts</h2>
+          <p>Cannot decide what to drink? Wether if its Coffee or Tea, there is always also hot chocolate.
+          <p>And no matter what you will choose in the end, it will fill you with warmth.</p
+              <img src="plain-html/Img/istockphoto-1454021618-612x612.jpg" alt="Coffee shop"
+              title="Comfy Cup Coffee Shop" width="612">
 
-        <section id="html"
+        <ol>
+          <li>...Learn more about Coffee</li>
+          <li>...Learn more about Matcha</li>
+          <li>...Learn more about Cocoa</li>
+        </ol>
+      </section>
 
-             <h2>The place where your journey starts</h2>
-            <p>Cannot decide what to drink? Wether if its Coffee or Tea, there is always also hot chocolate.
-            <p>And no matter what you will choose in the end, it will fill you with warmth.</p
-                <img src="plain-html/Img/istockphoto-1454021618-612x612.jpg" alt="Coffee shop"
-                title="Comfy Cup Coffee Shop" width="612">
-
-            <ol>
-                <li>...Learn more about Coffee</li>
-                <li>...Learn more about Matcha</li>
-                <li>...Learn more about Cocoa</li></ol>
             <br>I use recources from <abbr title="Comfy Cup Coffee">
                 <a href="https://mycoffeecup.de/collections/all-products?srsltid=AfmBOor_AFe03_z05v5ngt_njOTj_SKc2ZaUh3pMj1oNJBEXY94rjDG0">
                 Cup time</a></abbr>
@@ -73,11 +73,27 @@
             With the Industrial Revolution came mass production. Bottling, refrigeration, and pasteurization made beverages safer and more widely available.
             <p>Carbonated drinks like soda were invented, and milk and juices could be stored longer.
             In the modern era, innovation exploded. Soft drinks, energy drinks, and bottled water became everyday items. More recently, health trends have led to the rise of smoothies, plant-based milks, and low-sugar alternatives, reflecting a growing awareness of nutrition and wellness.</p>
+       
         <br><address>
             Coffeetown Riviera Cancún<br>
             Bahia Petempich Puerto Morelos, México<br>
             Colonia Morelos, México 77580
         </address>
+
+        <ul>
+            <li>Download an <a href="" 
+            download>HTML5 favicon</a></li>
+            <li>
+              Contact me at <a href="mailto:random@email.com">
+              my email address</a>
+            </li>
+            <li>
+              Dial <a href="tel:+1234567890">my phone number</a>
+            </li>
+            <li>
+              <a href="https://www.google.com"target=Google>Google</a>
+            </li>
+        </ul>
 
         <!-- TODO: Add more beverage types -->
 
@@ -91,8 +107,11 @@
         </dl>
 
             <hr>
-            &lt;&lt;&lt; &copy; Susi Radzanowski &gt;&gt;&gt;
+            &lt;&lt;&lt; &copy; Comfy Cup GmbH &gt;&gt;&gt;
             <hr>
+          <p>
+              <a href="#">Back to Top</a>
+          </p>
 
         <footer>
 
