--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     <script src="script.js" defer> </script>
  
 <!-- HTML -->
-    <body>
-        <h1>Welcome to Comfy Cup</h1>
+  <body>
+    <header>
+      <img src="img/comfyCupBanner.jpg" alt="Comfy Cup Header" title="Header" width="767" height="210">  
+      
+      <h1>Welcome to Comfy Cup</h1>
 
       <hr>
         <nav>
@@ -32,14 +35,25 @@
               </li>
             </ul>
         </nav>
-      <hr>
+      </hr>
+    </header>
 
+
+    <main>
       <section id="html">
         <h2>The place where your journey starts</h2>
           <p>Cannot decide what to drink? Wether if its Coffee or Tea, there is always also hot chocolate.
-          <p>And no matter what you will choose in the end, it will fill you with warmth.</p
-              <img src="plain-html/Img/istockphoto-1454021618-612x612.jpg" alt="Coffee shop"
-              title="Comfy Cup Coffee Shop" width="612">
+          <p>And no matter what you will choose in the end, it will fill you with warmth.</p>
+        <figure>
+          <img src="img/warmDrink.jpg" alt="Warm drink" title="Opening Picture" 
+          width="767" height="310" loading="lazy">
+            <figcaption>
+              Warm up your soul.
+            </figcaption>
+            <p>
+              <code>&lt;h1&gt;This is a tag.&lt;/h1&gt;</code>
+            </p>
+        </figure>
 
         <ol>
           <li>...Learn more about Coffee</li>
@@ -53,7 +67,7 @@
                 Cup time</a></abbr>
         <h3>Find your new routine now</h3>
             <p>Let us show you how fun drinks can upgrade your everyday life!</p>
-        <h3>How to start a routine</h3
+        <h3>How to start a routine</h3>
             <p>&nbsp;&nbsp;Step 1:...</p>
             <p>&nbsp;&nbsp;Step 2:...</p>
             <p>&nbsp;&nbsp;Step 3:...</p>
@@ -73,12 +87,6 @@
             With the Industrial Revolution came mass production. Bottling, refrigeration, and pasteurization made beverages safer and more widely available.
             <p>Carbonated drinks like soda were invented, and milk and juices could be stored longer.
             In the modern era, innovation exploded. Soft drinks, energy drinks, and bottled water became everyday items. More recently, health trends have led to the rise of smoothies, plant-based milks, and low-sugar alternatives, reflecting a growing awareness of nutrition and wellness.</p>
-       
-        <br><address>
-            Coffeetown Riviera Cancún<br>
-            Bahia Petempich Puerto Morelos, México<br>
-            Colonia Morelos, México 77580
-        </address>
 
         <ul>
             <li>Download an <a href="" 
@@ -112,11 +120,25 @@
           <p>
               <a href="#">Back to Top</a>
           </p>
+      </main>
 
-        <footer>
+      <footer>
 
-        </footer>
+        <br><address>
+            Coffeetown Riviera Cancún<br>
+            Bahia Petempich Puerto Morelos, México<br>
+            Colonia Morelos, México 77580
+        </address>
 
-    </body>
+        <figure>
+           <img src="img/portofino-2776894_1280.jpg" alt="Riviera"
+          width="767" title="Location of the Shop" width="210" loading="lazy">
+          <figcaption>
+            This is where our coffee is coming from.
+          </figcaption>
+        </figure>
+      </footer>
+
+  </body>
 
 </html>
