Produktkachel mit Badge hinzugefügt

--- a/VFCard.html
+++ b/VFCard.html
@@ -5,35 +5,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./VFCard.css" type="text/css" />
+    <!-- Fontawesome Link -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+    <!-- How to insert Fontawesome Link Icon: <i class="fa-sharp fa-solid fa-user"></i> -->
+    <title>GigaTV Card</title>
   </head>
 
   <body>
-    <img
-      src="./img/Screenshot 2025-10-22 074547.png"
-      alt="GigaTV ProduktCard"
-      width="580px"
-      height="728px"
-    />
+    <div class="whiteCard">
+      <div class="cardImage">
+        <div class="imageWindow">
+          <img
+            src="./img/GigaTV-Sound-Box-dc-h-496x476-dt.jpg"
+            alt="GigaTV Soundbox"
+          />
+        </div>
+      </div>
+      <div class="cardContent">
+        <h2 class="headlineCard">Dein Tarif für mehr Entertainment: GigaTV</h2>
+        <ul class="cardContent">
+          <li>TV für Deinen Kabel- oder Internet-Anschluss</li>
+          <li>Bis zu 65 HD-Sender & 74 SD-Sender</li>
+          <li>Großes Mediatheken-Angebot</li>
+          <li>Inklusive GigaTV Mobile-App für unterwegs</li>
+          <li>TV-Receiver, auf Wunsch mit Premium-Sound für zuhause</li>
+        </ul>
 
-    <div class="GigaTvCard">
-      <img
-        src="./img/GigaTV-Sound-Box-dc-h-496x476-dt.jpg"
-        alt="GigaTV Soundbox"
-        width="540px"
-        height="303px"
-      />
-      <h3>Dein Tarif für mehr Entertainment: GigaTV</h3>
-      <ul class="GigaTvVorteile">
-        <li>TV für Deinen Kabel- oder Internet-Anschluss</li>
-        <li>Bis zu 65 HD-Sender & 74 SD-Sender</li>
-        <li>Großes Mediatheken-Angebot</li>
-        <li>Inklusive GigaTV Mobile-App für unterwegs</li>
-        <li>TV-Receiver, auf Wunsch mit Premium-Sound für zuhause</li>
-      </ul>
-      <div class="GigaTvPrice">
-        <p class="Price"><strong>9,99 €</strong></p>
-        <p>pro Monat</p>
-        <a href="GigaTv">GigaTV entdecken</a>
+        <span class="priceMain">
+          <h3 class="price">9,99<span class="euro">€</span></h3>
+          <p class="priceDesc">pro Monat</p>
+        </span>
+        <a
+          class="GigaTV"
+          href="https://www.vodafone.de/privat/fernsehen/giga-tv.html?b_id=1694&c_id=sea_cic_307:fix_key_bko__per_vtv_dive_&extProvId=5&extPu=vf-googleads&extCr=174212646131-716114624286&extSi=&extTg=&extLi=21790349920&keyword=giga%20tv&extAP=&extMT=e&gclsrc=aw.ds&gad_source=1&gad_campaignid=21790349920&gbraid=0AAAAAD3KTTyMHMnEpbst_2Vzai8l39V1S&gclid=CjwKCAjwpOfHBhAxEiwAm1SwEv1j1-95TP_Y_-aXNq-lB7wxXh55pgepiF3sf2dvTAvpEbZ-phfOyRoCoJ8QAvD_BwE"
+          target="_blank"
+          rel="noOpener noreferrer"
+          >GigaTV entdecken&nbsp;<i class="fa-solid fa-chevron-right"></i
+        ></a>
+      </div>
+    </div>
+
+    <!-- Second Variant of ProductCard -->
+    <div class="buttonCard">
+      <div class="cardImage2">
+        <img
+          src="./img/samsung-bundle-youtube-dc-v-992x952-dtm.jpg"
+          alt="GigaTV Angebote"
+          width="550px"
+          height="380px"
+        />
+      </div>
+      <div class="cardContent2">
+        <div class="higlightBadge">
+          <span class="badgeText">Nur bis zum 29. Oktober</span>
+        </div>
+
+        <h3>Zu Deinem Samsung Galaxy Top-Smartphone: Galaxy Tab als Zugabe</h3>
+        <span class="priceMain2"> </span>
+        <a
+          class="samsungGalaxyTop"
+          href="https://www.vodafone.de/privat/handys-tablets-tarife/alle-smartphones.html?filters=Samsung&icmp=home:discoverycard1:bnt:credit:hardware:samsung__tabletbundle"
+          target="_blank"
+          rel="noOpener noreferrer"
+          >Samsung Galaxy aussuchen&nbsp;<i
+            class="fa-solid fa-chevron-right"
+          ></i
+        ></a>
       </div>
     </div>
   </body>
