Fix Img Problem

--- a/VFCard.html
+++ b/VFCard.html
@@ -19,7 +19,7 @@
       <div class="cardImage">
         <div class="imageWindow">
           <img
-            src="./img/GigaTV-Sound-Box-dc-h-496x476-dt.jpg"
+            src="./img/GigaTV-Sound-Box-dc-h-496x476-dt (1).jpg"
             alt="GigaTV Soundbox"
           />
         </div>
@@ -52,15 +52,16 @@
     <div class="buttonCard">
       <div class="cardImage2">
         <img
-          src="./img/samsung-bundle-youtube-dc-v-992x952-dtm.jpg"
+          src="./img/samsung-bundle-youtube-dc-v-992x952-dtm.jpgdd"
           alt="GigaTV Angebote"
-          width="550px"
-          height="380px"
         />
       </div>
       <div class="cardContent2">
         <div class="higlightBadge">
-          <span class="badgeText">Nur bis zum 29. Oktober</span>
+          <span class="badgeText"
+            ><i class="fa-regular fa-calendar-days"></i> &nbsp;Nur bis zum 29.
+            Oktober</span
+          >
         </div>
 
         <h3>Zu Deinem Samsung Galaxy Top-Smartphone: Galaxy Tab als Zugabe</h3>
