Image Fixed on second variant

--- a/VFCard.html
+++ b/VFCard.html
@@ -51,10 +51,12 @@
     <!-- Second Variant of ProductCard -->
     <div class="buttonCard">
       <div class="cardImage2">
-        <img
-          src="./img/samsung-bundle-youtube-dc-v-992x952-dtm.jpgdd"
-          alt="GigaTV Angebote"
-        />
+        <div class="imageWindow2">
+          <img
+            src="./img/samsung-bundle-youtube-dc-v-992x952-dtm.jpg"
+            alt="GigaTV Angebote"
+          />
+        </div>
       </div>
       <div class="cardContent2">
         <div class="higlightBadge">
