Update Product Cards Practice

--- a/VFCard.html
+++ b/VFCard.html
@@ -79,5 +79,10 @@
         ></a>
       </div>
     </div>
+
+    <div class="promoCard flex-container">
+      <div class="cardImage3"></div>
+      <div class="cardContent3"></div>
+    </div>
   </body>
 </html>
