Ordneranpassung und Grid Übung angelegt

--- a/index.html
+++ b/index.html
@@ -18,26 +18,22 @@
   <script src="script.js" defer></script>
 
   <!-- HTML -->
-  <body>
+  <body class="grid">
+    <nav class="navi">
+      <ul>
+        <li><a href="./simOn/SIMon.html">SIMon Exercise</a></li>
+        <li><a href="./arrayJs/array.html">JavaScript arrays</a></li>
+        <li><a href="./vfCard/VFCard.html">Vodafone Card Exercise</a></li>
+      </ul>
+    </nav>
+
     <header>
       <img
         src="img/comfyCupBanner.jpg"
         alt="Comfy Cup Header"
         title="Header"
-        width="767"
-        height="210"
+        width="100%"
       />
-
-      <div id="Div1">
-        <nav>
-          <ul class="Navi">
-            <li><a href="">JavaScript Toggle</a></li>
-            <li><a href="./SIMon.html">SIMon Exercise</a></li>
-            <li><a href="./array.html">JavaScript arrays</a></li>
-            <li><a href="./VFCard.html">Vodafone Card Exercise</a></li>
-          </ul>
-        </nav>
-      </div>
 
       <h1>Welcome to Comfy Cup</h1>
 
@@ -75,6 +71,7 @@
           <li>...Learn more about Matcha</li>
           <li>...Learn more about Cocoa</li>
         </ol>
+
         <aside>
           <details>
             <summary>
@@ -86,7 +83,9 @@
             </p>
           </details>
         </aside>
+
         <br />
+
         <table>
           <tr>
             <td>
@@ -142,41 +141,43 @@
       <p>Impress family and friends with your new learned skills!</p>
       <p>You can contact us online or find us here:</p>
 
-      <h4>The history behind beverages</h4>
-      <p>
-        From the very beginning of human history, water was the essential drink
-        for survival. But as societies evolved, so did their thirst for variety.
-        Thousands of years ago, early humans discovered fermentation—likely by
-        accident—which led to the creation of primitive alcoholic beverages made
-        from fruits, honey, and grains. In ancient Mesopotamia and Egypt, beer
-        became a staple, brewed from barley and consumed daily. Meanwhile, wine
-        emerged in the Mediterranean, especially in Greece and Rome, where it
-        was often mixed with water and used in both social and religious
-        rituals. Milk also became common as people began domesticating animals
-        like cows and goats.
-      </p>
+      <article class="teaHistory">
+        <h4>The history behind beverages</h4>
+        <p>
+          From the very beginning of human history, water was the essential
+          drink for survival. But as societies evolved, so did their thirst for
+          variety. Thousands of years ago, early humans discovered
+          fermentation—likely by accident—which led to the creation of primitive
+          alcoholic beverages made from fruits, honey, and grains. In ancient
+          Mesopotamia and Egypt, beer became a staple, brewed from barley and
+          consumed daily. Meanwhile, wine emerged in the Mediterranean,
+          especially in Greece and Rome, where it was often mixed with water and
+          used in both social and religious rituals. Milk also became common as
+          people began domesticating animals like cows and goats.
+        </p>
 
-      <p>During the Middle Ages, new beverages entered the scene.</p>
-      <p>
-        <em>Tea</em> was cultivated in China and spread to Japan, while coffee,
-        originating in Ethiopia, gained popularity across the Islamic world.
-        Distillation techniques developed during this time gave rise to stronger
-        drinks like spirits and liquors.
-      </p>
-      <br />The colonial era brought global trade, and with it, the widespread
-      distribution of coffee, tea, chocolate, and sugar. These ingredients
-      transformed drinking habits around the world, especially in Europe and the
-      Americas. With the Industrial Revolution came mass production. Bottling,
-      refrigeration, and pasteurization made beverages safer and more widely
-      available.
-      <p>
-        Carbonated drinks like soda were invented, and milk and juices could be
-        stored longer. In the modern era, innovation exploded. Soft drinks,
-        energy drinks, and bottled water became everyday items. More recently,
-        health trends have led to the rise of smoothies, plant-based milks, and
-        low-sugar alternatives, reflecting a growing awareness of nutrition and
-        wellness.
-      </p>
+        <p>During the Middle Ages, new beverages entered the scene.</p>
+        <p>
+          <em>Tea</em> was cultivated in China and spread to Japan, while
+          coffee, originating in Ethiopia, gained popularity across the Islamic
+          world. Distillation techniques developed during this time gave rise to
+          stronger drinks like spirits and liquors.
+        </p>
+        <br />The colonial era brought global trade, and with it, the widespread
+        distribution of coffee, tea, chocolate, and sugar. These ingredients
+        transformed drinking habits around the world, especially in Europe and
+        the Americas. With the Industrial Revolution came mass production.
+        Bottling, refrigeration, and pasteurization made beverages safer and
+        more widely available.
+        <p>
+          Carbonated drinks like soda were invented, and milk and juices could
+          be stored longer. In the modern era, innovation exploded. Soft drinks,
+          energy drinks, and bottled water became everyday items. More recently,
+          health trends have led to the rise of smoothies, plant-based milks,
+          and low-sugar alternatives, reflecting a growing awareness of
+          nutrition and wellness.
+        </p>
+      </article>
 
       <ul>
         <li>Download an <a href="" download>HTML5 favicon</a></li>
