--- a/vfCard/VFCard.html
+++ b/vfCard/VFCard.html
@@ -19,8 +19,9 @@
       <div class="cardImage">
         <div class="imageWindow">
           <img
-            src="./img/GigaTV-Sound-Box-dc-h-496x476-dt (1).jpg"
+            src="../img/GigaTV-Sound-Box-dc-h-496x476-dt (1).jpg"
             alt="GigaTV Soundbox"
+            class="cardImage"
           />
         </div>
       </div>
@@ -53,7 +54,7 @@
       <div class="cardImage2">
         <div class="imageWindow2">
           <img
-            src="./img/samsung-bundle-youtube-dc-v-992x952-dtm.jpg"
+            src="../img/samsung-bundle-youtube-dc-v-992x952-dtm.jpg"
             alt="GigaTV Angebote"
           />
         </div>
@@ -67,6 +68,9 @@
         </div>
 
         <h3>Zu Deinem Samsung Galaxy Top-Smartphone: Galaxy Tab als Zugabe</h3>
+        <span class="priceMain">
+          <p class="priceDesc2">Ab einmal<span class="euro2">1</span>€</p>
+        </span>
         <span class="priceMain2"> </span>
         <a
           class="samsungGalaxyTop"
@@ -80,9 +84,75 @@
       </div>
     </div>
 
+    <!-- Third Variant of Product Card -->
     <div class="promoCard flex-container">
-      <div class="cardImage3"></div>
-      <div class="cardContent3"></div>
+      <div class="cardImage3">
+        <div class="imageWindow3">
+          <img
+            src="../img/apple-launch-2025-dc-h-496x476-dt.jpg"
+            alt="iPhone 17"
+            class="iPhone17"
+          />
+        </div>
+      </div>
+      <div class="cardContent3">
+        <div class="higlightBadge">
+          <span class="badgeText">Jetzt neu</span>
+        </div>
+
+        <h3>iPhone 17 Pro. Alles auf Pro.</h3>
+        <span class="priceMain">
+          <p class="priceDesc3">Ab einmal<span class="euro3">1</span>€</p>
+        </span>
+        <span class="priceMain3"> </span>
+        <a
+          class="iPhone17"
+          href="https://www.vodafone.de/privat/handys-tablets-tarife/alle-smartphones.html?filters=Samsung&icmp=home:discoverycard1:bnt:credit:hardware:samsung__tabletbundle"
+          target="_blank"
+          rel="noOpener noreferrer"
+          >Zum iPhone 17 Pro&nbsp;<i class="fa-solid fa-chevron-right"></i
+        ></a>
+        <br />
+        <a
+          class="alleIphones"
+          href="https://www.vodafone.de/privat/handys-tablets-tarife/alle-smartphones.html?filters=Samsung&icmp=home:discoverycard1:bnt:credit:hardware:samsung__tabletbundle"
+          target="_blank"
+          rel="noOpener noreferrer"
+          >Zur iPhone-Übersicht&nbsp;<i class="fa-solid fa-chevron-right"></i
+        ></a>
+      </div>
+    </div>
+
+    <!-- Fourth Variant of ProductCard -->
+    <div class="promoCard2">
+      <div class="cardImage4">
+        <div class="imageWindow4">
+          <img
+            src="../img/FamilyCard.jpg"
+            alt="Vodafone Zusatzkarten"
+            class="familyCard"
+          />
+          <div class="higlightBadge">
+            <span class="badgeText">Aktion: Doppeltes Datenvolumen</span>
+          </div>
+        </div>
+
+        <div class="cardContent4">
+          <h3>Hol Dir eine Zusatzkarte z.B. mit 10 GB statt 5 GB</h3>
+          <span class="priceMain">
+            <p class="priceDesc3">für nur<span class="euro3">9,99</span>€</p>
+            <p class="priceDesc">pro Monat</p>
+          </span>
+          <span class="priceMain3"> </span>
+          <a
+            class="alleIphones"
+            href="https://www.vodafone.de/privat/handys-tablets-tarife/alle-smartphones.html?filters=Samsung&icmp=home:discoverycard1:bnt:credit:hardware:samsung__tabletbundle"
+            target="_blank"
+            rel="noOpener noreferrer"
+            >Zu den Zusatzkarten&nbsp;<i class="fa-solid fa-chevron-right"></i
+          ></a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
