--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script src="script.js" defer></script>
 
   <!-- HTML -->
-  <body class="grid">
+  <body>
     <nav class="navi">
       <ul>
         <li><a href="./simOn/SIMon.html">SIMon Exercise</a></li>
@@ -142,19 +142,22 @@
       <p>You can contact us online or find us here:</p>
 
       <article class="teaHistory">
-        <h4>The history behind beverages</h4>
-        <p>
-          From the very beginning of human history, water was the essential
-          drink for survival. But as societies evolved, so did their thirst for
-          variety. Thousands of years ago, early humans discovered
-          fermentation—likely by accident—which led to the creation of primitive
-          alcoholic beverages made from fruits, honey, and grains. In ancient
-          Mesopotamia and Egypt, beer became a staple, brewed from barley and
-          consumed daily. Meanwhile, wine emerged in the Mediterranean,
-          especially in Greece and Rome, where it was often mixed with water and
-          used in both social and religious rituals. Milk also became common as
-          people began domesticating animals like cows and goats.
-        </p>
+        <div class="infoBox">
+          <h4>The history behind beverages</h4>
+          <p>
+            From the very beginning of human history, water was the essential
+            drink for survival. But as societies evolved, so did their thirst
+            for variety. Thousands of years ago, early humans discovered
+            fermentation—likely by accident—which led to the creation of
+            primitive alcoholic beverages made from fruits, honey, and grains.
+            In ancient Mesopotamia and Egypt, beer became a staple, brewed from
+            barley and consumed daily. Meanwhile, wine emerged in the
+            Mediterranean, especially in Greece and Rome, where it was often
+            mixed with water and used in both social and religious rituals. Milk
+            also became common as people began domesticating animals like cows
+            and goats.
+          </p>
+        </div>
 
         <p>During the Middle Ages, new beverages entered the scene.</p>
         <p>
