--- a/grid.html
+++ b/grid.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="grid.css" />
   </head>
 
-  <body>
+  <body class="grid">
     <nav class="navi">
       <ul class="projects">
         <li><a href="./plain-html/simOn/SIMon.html">SIMon Card</a></li>
@@ -18,7 +18,7 @@
 
     <header>
       <img
-        src="./plain-html/img/comfyCupBanner.jpg"
+        src="../plain-html/img/comfyCupBanner.jpg"
         alt="Comfy Cup Header"
         title="Header"
         width="100%"
@@ -31,19 +31,22 @@
       <h2>Thirsty? We've got you covered</h2>
 
       <article>
-        <h4>The history behind beverages</h4>
-        <p>
-          From the very beginning of human history, water was the essential
-          drink for survival. But as societies evolved, so did their thirst for
-          variety. Thousands of years ago, early humans discovered
-          fermentation—likely by accident—which led to the creation of primitive
-          alcoholic beverages made from fruits, honey, and grains. In ancient
-          Mesopotamia and Egypt, beer became a staple, brewed from barley and
-          consumed daily. Meanwhile, wine emerged in the Mediterranean,
-          especially in Greece and Rome, where it was often mixed with water and
-          used in both social and religious rituals. Milk also became common as
-          people began domesticating animals like cows and goats.
-        </p>
+        <div class="infoBox">
+          <h4>The history behind beverages</h4>
+          <p>
+            From the very beginning of human history, water was the essential
+            drink for survival. But as societies evolved, so did their thirst
+            for variety. Thousands of years ago, early humans discovered
+            fermentation—likely by accident—which led to the creation of
+            primitive alcoholic beverages made from fruits, honey, and grains.
+            In ancient Mesopotamia and Egypt, beer became a staple, brewed from
+            barley and consumed daily. Meanwhile, wine emerged in the
+            Mediterranean, especially in Greece and Rome, where it was often
+            mixed with water and used in both social and religious rituals. Milk
+            also became common as people began domesticating animals like cows
+            and goats.
+          </p>
+        </div>
         <h4>The invention of comfort drinks</h4>
       </article>
     </main>
