Added Responsive Card and Hover effect

--- a/grid.html
+++ b/grid.html
@@ -29,6 +29,46 @@
     <main>
       <p class="introText">The Place where your journey starts</p>
       <h2>Thirsty? We've got you covered</h2>
+      <h3>Check out our selection:</h3>
+
+      <section class="container">
+        <div class="card">
+          <div class="cardImage teaImg"></div>
+          <h2>To Infini-tea and beyond</h2>
+          <p>
+            Wether you are spilling the tea or sipping in seene silence, there
+            is a blend for every mood.
+          </p>
+          <a href="https://www.teegschwendner.de/"
+            >Click to spill (or sip) the tea</a
+          >
+        </div>
+
+        <div class="card">
+          <div class="cardImage coffeeImg"></div>
+          <h2>The Daily Grind</h2>
+          <p>
+            Strong, bold – coffee is not just a drink but a lifestyle. Time to
+            espresso yourself.
+          </p>
+          <a
+            href="https://littleroastery.nl/collections/vers-gebrande-koffie?tw_source=google&tw_adid=774758781089&tw_campaign=23026894722&tw_kwdid=kwd-304712441181&gad_source=1&gad_campaignid=23026894722&gbraid=0AAAAACM5rJmhfQnWGEdRJB2ELxSdwq-Px&gclid=EAIaIQobChMIt4Wk2JfJkAMVw6-DBx0mljoYEAAYASAAEgJwtvD_BwE"
+            >Fuel and espress yourself</a
+          >
+        </div>
+
+        <div class="card">
+          <div class="cardImage cocoaImg"></div>
+          <h2>Choco Loco</h2>
+          <p>
+            Perfect for chilly nights, lazy mornings or whenever your heart
+            needs a warm hug, this classic brings instant happiness.
+          </p>
+          <a href="https://www.beckscocoa.de/shop/"
+            >Warm up with a cozy cup of cocoa!</a
+          >
+        </div>
+      </section>
 
       <article>
         <div class="infoBox">
